# dapp-develop

./: .env.example  .eslintrc.json  .gitignore  package.json  pnpm-lock.yaml  tailwind.config.js  tsconfig.json
.cargo/: config.toml
.github/workflows/: main.yml
src/: App.tsx  main.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
src/api/: addRemarks.ts  endBreak.ts  finishWork.ts  getBreak.ts  getProjects.ts  getRedDots.ts  getScrums.ts  getTasks.ts  getUser.ts  loginUser.ts  startBreak.ts  startTask.ts  stopTask.ts  updateCurrentEstimate.ts  users.ts
src/api/consultations/: cancel-consultation.ts  consultationInvites.ts  consultations.ts  create-sudden-consultation.ts  edit-consultations.ts  join-consultation.ts  leave-consultation.ts  requestConsultation.ts  sudden-consultation.ts
src/components/custom/: AddRemarksDialog.tsx  ConsultDialog.tsx  ConsultationItem.tsx  ScrumItem.tsx  StopTaskButton.tsx  Updater.tsx  graph.tsx  (+2 more)
src/data/: use-active-tasks.tsx  use-attendance.tsx  use-breaks.tsx  use-projects.tsx  use-task-types.tsx  use-user.tsx
src/hooks/: useWindowDragAndMinimize.tsx
src/lib/: checkIfRequiredToUpdateEstimate.ts  checkIfTimerOff.ts  customAxios.ts  portalUrl.ts  request.ts  router.tsx  utils.ts
src/screens/: AttributeHour.tsx  BreakReason.tsx  BreakTimer.tsx  Consultations.tsx  CreateConsultation.tsx  CreateTask.tsx  EditConsultation.tsx  MultipleProjects.tsx  Scrum.tsx  SelectTask.tsx  TakeABreak.tsx  index.ts
src/store/: index.tsx
src/styles/: globals.css
src/types/: TaskTimer.d.ts  index.tsx
(+13 files in other folders)
